--- a/forgetpwd.html
+++ b/forgetpwd.html
@@ -6,11 +6,55 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>LinkedIn</title>
+  <link rel="icon" href="images/logo.ico">
   <link rel="stylesheet" href="css/bootstrap.css">
-  <!-- <link rel="stylesheet" href="css/style.css"> -->
+  <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
+
+  <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <a href="index.html"><img src="./images/linked.png" alt="logo"></a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav ml-auto nav-forget">
+        <li class="forget-nav-button">
+          <a href="signin.html"><button class="sign-button" type="button" name="button">Signin</button></a>
+        </li>
+        <li class="forget-nav-button">
+          <a href="register.html"><button class="join-button" type="button" name="button">Join now</button></a>
+        </li>
+      </ul>
+    </div>
+  </nav>
+
+  <div class="container" id="forget-contain">
+  <div class="row">
+    <div class="col-sm-2">
+
+    </div>
+    <div class="col-sm-6">
+      <h2>First, let's find your account</h2>
+      <h5>Please enter your email or phone</h5>
+      <form>
+  <div class="form-group">
+    <label for="exampleInputEmail1">Email or phone</label>
+    <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter your email or phone">
+  </div>
+  <div class="btn-group">
+    <button type="button" class="btn btn-outline-primary btn-lg">Cancel</button>
+    <button type="button" class="btn btn-primary">Find account</button>
+  </div>
+</form>
+    </div>
+    <div class="col-sm-4">
+
+    </div>
+  </div>
+</div>
 
   <script src="js/jquery.min.js" type="text/javascript"></script>
   <script src="js/popper.min.js" type="text/javascript"></script>
