--- a/index.html
+++ b/index.html
@@ -6,15 +6,16 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>LinkedIn</title>
+  <link rel="icon" href="images/logo.ico">
   <link rel="stylesheet" href="css/bootstrap.css">
   <link rel="stylesheet" href="css/style.css">
 </head>
 
-<body>
+<body id="index-bd">
 
   <!-- Navbar -->
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <h1 class="navbar-brand">LinkedIn</h1>
+    <img src="./images/linked.png" alt="logo">
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -32,36 +33,44 @@
       </ul>
     </div>
   </nav>
-  <div class="card bg-dark text-white">
-  <img class="card-img" src="images/back-image.jpeg" alt="background-image" width="867px" height="500px">
-  <div class="card-img-overlay">
-    <div class="top-card">
-      <h4>Get started - it's free.</h4>
+  <!-- FORM -->
+  <div class="container" id="contain">
+    <div class="row">
+      <div class="col-4 col-sm-4 col-md-4 col-lg-4">
+
+      </div>
+      <div class="col-4 col-sm-4 col-md-4 col-lg-4" id="form-group">
+        <form class="card-form">
+          <h4>Get started it's free</h4>
+          <div class="form-group">
+            <label for="exampleInputFName">First Name</label>
+            <input type="text" class="form-control" id="exampleInputFName">
+          </div>
+          <div class="form-group">
+            <label for="exampleInputLName">Last Name</label>
+            <input type="email" class="form-control" id="exampleInputLName">
+          </div>
+      <div class="form-group">
+        <label for="exampleInputEmail1">Email address</label>
+        <input type="email" class="form-control" id="exampleInputEmail1">
+      </div>
+      <div class="form-group">
+        <label for="exampleInputPassword1">Password</label>
+        <input type="password" class="form-control" id="exampleInputPassword1">
+      </div>
+      <div class="form-group">
+        <p>By clicking Join now, you agree to the LinkedIn User Agreement, <a href="#">Privacy Policy</a>, and <a href="#">Cookie Policy</a>.</p>
+      </div>
+      <button type="button" class="btn btn-primary btn-lg btn-block">Join Now</button>
+      </form>
+      </div>
+      <div class="col-4 col-sm-4 col-md-4 col-lg-4">
+
+      </div>
     </div>
-    <form class="card-form">
-      <div class="form-group">
-        <label for="exampleInputFName">First Name</label>
-        <input type="text" class="form-control" id="exampleInputFName">
-      </div>
-      <div class="form-group">
-        <label for="exampleInputLName">Last Name</label>
-        <input type="email" class="form-control" id="exampleInputLName">
-      </div>
-  <div class="form-group">
-    <label for="exampleInputEmail1">Email address</label>
-    <input type="email" class="form-control" id="exampleInputEmail1">
   </div>
-  <div class="form-group">
-    <label for="exampleInputPassword1">Password</label>
-    <input type="password" class="form-control" id="exampleInputPassword1">
-  </div>
-  <div class="form-group">
-    <p>By clicking Join now, you agree to the LinkedIn User Agreement, <a href="#">Privacy Policy</a>, and <a href="#">Cookie Policy</a>.</p>
-  </div>
-  <button type="button" class="btn btn-primary btn-lg btn-block">Join Now</button>
-</form>
-  </div>
-</div>
+
+
   <script src="js/jquery.min.js" type="text/javascript"></script>
   <script src="js/popper.min.js" type="text/javascript"></script>
   <script src="js/bootstrap.min.js" type="text/javascript"></script>
