--- a/chatBox.html
+++ b/chatBox.html
@@ -9,6 +9,7 @@
 
     <link href="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css" type="text/css" rel="stylesheet">
+    <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" href="./css/chatBox.css">
 </head>
 
@@ -19,7 +20,6 @@
             <img src="./images/example.png" alt="" width="150" height="50">
         </a>
     </nav>
-
 
     <div class="container">
         <h3 class=" text-center">Messaging..</h3>
@@ -190,7 +190,8 @@
 
         </div>
     </div>
-
+    <script src="./js/jquery-3.3.1.slim.min.js"></script>
+    <script src="./js/bootstrap.js"></script>
     <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 </body>
