fix some bugs in chatBOX

--- a/chatBox.html
+++ b/chatBox.html
@@ -8,7 +8,9 @@
     <title>Chat Box</title>
 
     <link href="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
+
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css" type="text/css" rel="stylesheet">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css" integrity="sha384-5sAR7xN1Nv6T6+dT2mhtzEpVJvfS3NScPQTrOxhwjIuvcA67KV2R5Jz6kr4abQsz" crossorigin="anonymous">
     <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" href="./css/chatBox.css">
 </head>
@@ -57,7 +59,7 @@
                         <div class="chat_list">
                             <div class="chat_people">
                                 <div class="chat_img">
-                                    <img src="https://ptetutorials.com/images/user-profile.png" alt="sunil"> </div>
+                                    <img src="./images/user.png" alt="sunil"> </div>
                                 <div class="chat_ib">
                                     <h5>John
                                         <span class="chat_date">Dec 25</span>
@@ -69,7 +71,7 @@
                         <div class="chat_list">
                             <div class="chat_people">
                                 <div class="chat_img">
-                                    <img src="https://ptetutorials.com/images/user-profile.png" alt="sunil"> </div>
+                                    <img src="./images/user.png" alt="sunil"> </div>
                                 <div class="chat_ib">
                                     <h5>Rohn
                                         <span class="chat_date">Dec 25</span>
@@ -81,7 +83,7 @@
                         <div class="chat_list">
                             <div class="chat_people">
                                 <div class="chat_img">
-                                    <img src="https://ptetutorials.com/images/user-profile.png" alt="sunil"> </div>
+                                    <img src="./images/user.png" alt="sunil"> </div>
                                 <div class="chat_ib">
                                     <h5>Smith
                                         <span class="chat_date">Dec 25</span>
@@ -93,7 +95,7 @@
                         <div class="chat_list">
                             <div class="chat_people">
                                 <div class="chat_img">
-                                    <img src="https://ptetutorials.com/images/user-profile.png" alt="sunil"> </div>
+                                    <img src="./images/user.png" alt="sunil"> </div>
                                 <div class="chat_ib">
                                     <h5>Peter
                                         <span class="chat_date">Dec 25</span>
@@ -105,7 +107,7 @@
                         <div class="chat_list">
                             <div class="chat_people">
                                 <div class="chat_img">
-                                    <img src="https://ptetutorials.com/images/user-profile.png" alt="sunil"> </div>
+                                    <img src="./images/user.png" alt="sunil"> </div>
                                 <div class="chat_ib">
                                     <h5>Johnson
                                         <span class="chat_date">Dec 25</span>
@@ -180,7 +182,7 @@
                         <div class="input_msg_write">
                             <input type="text" class="write_msg" placeholder="Type a message" />
                             <button class="msg_send_btn" type="button">
-                                <i class="fa fa-paper-plane-o" aria-hidden="true"></i>
+                                <i class="fas fa-location-arrow"></i>
                             </button>
                         </div>
                     </div>
